INCLUDE_DIRECTORIES(${CAMSENSE_SOURCE_DIR}/src/base)
LINK_DIRECTORIES(${CAMSENSE_SOURCE_DIR}/src/base)


INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/dep
    #${PROJECT_SOURCE_DIR}/dep/eigen3
	)
	
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

	
ADD_SUBDIRECTORY(base)

ADD_EXECUTABLE (repair_demo repair_demo.cpp )
TARGET_LINK_LIBRARIES (repair_demo lidar_toolkit)


